# LovassyApp

./: .gitignore  Blueboard.sln  LovassyApp.sln  LovassyApp.sln.DotSettings  README.md  blueboard-ctl.sh  docker-compose-dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: hiba-bejelentése.md  új-funkcionalitás-kérése.md
.github/workflows/: api-docs-deploy.yml  backboard-build.yml  backboard-release.yml  blueboard-build.yml  boardlight-build.yml  deploy.yml  development-build.yml  new-relic-change-tracking.yml
Backboard/: .eslintignore  .eslintrc.cjs  App.axaml  App.axaml.cs  Backboard.csproj  Program.cs  README.md  index.html  package.json  pnpm-lock.yaml
Backboard/Styles/: Colors.axaml  Theme.axaml
Backboard/src-tauri/: Cargo.toml  tauri.conf.json
Backboard/src-tauri/icons/: icon.icns
Backboard/src-tauri/src/: cryptography.rs  grades_processor.rs  main.rs
Blueboard/: Blueboard.csproj  Program.cs  README.md  appsettings.Development.json  appsettings.Production.json  appsettings.json  patch-csproj-prod.patch  post-deploy.sh
Boardlight/: .env.example  .eslintignore  .eslintrc.cjs  index.html  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
Helpers.Cryptography/: AddCryptographyHelpersExtension.cs  Helpers.Cryptography.csproj
Helpers.Cryptography.Tests/: Helpers.Cryptography.Tests.csproj
Helpers.Email/: AddEmailHelpersExtension.cs  Helpers.Email.csproj
Helpers.Filtering/: AddFilteringHelpersExtension.cs  Helpers.Filtering.csproj
Helpers.Framework/: AddFrameworkHelpersExtension.cs  ApiControllerBase.cs  Helpers.Framework.csproj
Helpers.Jobs/: AddJobsHelpersExtension.cs  Helpers.Jobs.csproj
Helpers.WebApi/: AddFrameworkHelpersExtension.cs  AddWebApiHelpersExtension.cs  ApiControllerBase.cs  Helpers.WebApi.csproj
WebApi/: Program.cs  WebApi.csproj  appsettings.Development.json
WebApi.Tests/: WebApi.Tests.csproj
docker/: Dockerfile.boardlight
openapi_dev/: schema.json
(+1220 files in other folders)
