[package]
name = "backboard"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "global-shortcut-all", "http-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"
api = { path = "../src-api" }
calamine = "0.21.2"
crypto-hash = "0.3.4"
base64 = "0.21.2"
pqc_kyber = "0.6.0"
rand = "0.8.5"
pbkdf2 = "0.12.2"
aes = "0.8.3"
sha2 = "0.10.7"
block-modes = "0.8.1"
libaes = "0.6.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
